# web-Server

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yaml
postgres/: 0.seql
src/: main.rs
www/: 400.html  404.html  500.html  home.html  index.html  register.html
