[package]
name = "webServer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
serde_derive = "1.0.136"
serde = "1.0.136"
regex = "1.5"